@@ -17,3 +17,5 @@
 - dropped `getArtboardSettings()`, `parseObjectName()` does the same thing
 - dropped `getDocumentSlug()`
 - extracted `makeList()`
+- extracted `extendFontlist()`
+
